# event-management-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api-gateway/: Cargo.toml
api-gateway/src/: handlers.rs  main.rs  proxy.rs
auth-service/: Cargo.toml
auth-service/migrations/: 001_create_users.sql
auth-service/src/: db.rs  handlers.rs  main.rs  models.rs
event-service/: Cargo.toml
event-service/migrations/: 001_create_events.sql
event-service/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: app.js  index.html  style.css
qr-service/: Dockerfile  app.py  requirements.txt
registration-service/: Cargo.toml
registration-service/migrations/: 001_create_registrations.sql
registration-service/src/: db.rs  handlers.rs  main.rs  models.rs
scripts/: init-db.sh
shared/: Cargo.toml
shared/src/: auth.rs  errors.rs  lib.rs  models.rs
user-service/: Cargo.toml
user-service/migrations/: 001_create_user_profiles.sql
user-service/src/: db.rs  handlers.rs  main.rs  models.rs
