[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }       # Nasa zajednicka biblioteka
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
